monitor/uptimekuma/uptimekuma-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uptimekuma
  labels:
    kubernetes.io/metadata.name: uptimekuma
    media-ns: authorized
