monitor/uptimekuma/uptimekuma-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptimekuma-ingressroute
  namespace: uptimekuma
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`uptimekuma.ltc.tsphotoclicks.net`)
      services:
        - name: uptimekuma
          port: 3001
  tls:
    secretName: uptimekuma-internal-secret
---
apiVersion: v1
kind: Service
metadata:
  name: uptimekuma
  namespace: uptimekuma
spec:
  selector:
    app: uptimekuma
  ports:
    - port: 3001
      targetPort: 3001
